--- a/Domasna rabota 2/tech prototype/KinMKD/src/main/resources/templates/details.html
+++ b/Domasna rabota 2/tech prototype/KinMKD/src/main/resources/templates/details.html
@@ -216,7 +216,7 @@
                            </div>
                     </div>
                         <div>
-                            <a href="myReview.html">
+                            <a th:href="@{/location/1/my-review}">
                                 My Review
                             </a>
                         </div>
