--- a/Domasna rabota 2/tech prototype/KinMKD/src/main/resources/templates/index.html
+++ b/Domasna rabota 2/tech prototype/KinMKD/src/main/resources/templates/index.html
@@ -150,7 +150,7 @@
                 Целото културно-историско наследство на Македонија на едно место, со еден клик!
               </p>
               <div class="">
-                <a href="search.html">
+                <a th:href="@{/location/search}">
                   Search
                 </a>
               </div>
