--- a/Domasna rabota 2/tech prototype/KinMKD/src/main/resources/templates/login.html
+++ b/Domasna rabota 2/tech prototype/KinMKD/src/main/resources/templates/login.html
@@ -134,7 +134,7 @@
         </form>
         <div class="signup">
         <span class="signup">Don't have an account?
-         <a href="signup.html"><label>Signup</label></a>
+         <a th:href="@{/account/register}"><label>Signup</label></a>
         </span>
         </div>
       </div>
