--- a/Domasna rabota 2/tech prototype/KinMKD/src/main/resources/templates/signup.html
+++ b/Domasna rabota 2/tech prototype/KinMKD/src/main/resources/templates/signup.html
@@ -133,7 +133,7 @@
         </form>
         <div class="signup">
         <span class="signup">Already have an account?
-         <a href="login.html"><label >Login</label></a>
+         <a th:href="@{/account/login}"><label >Login</label></a>
         </span>
         </div>
       </div>
