--- a/Domasna rabota 2/tech prototype/KinMKD/src/main/resources/templates/about.html
+++ b/Domasna rabota 2/tech prototype/KinMKD/src/main/resources/templates/about.html
@@ -138,7 +138,7 @@
       <div class="row">
         <div class="col-md-5">
           <div class="img-box">
-            <img src="images/who-img.jpg" alt="">
+            <img th:src="@{/images/who-img.jpg}" alt="">
           </div>
         </div>
         <div class="col-md-7">
