--- a/Domasna rabota 2/tech prototype/KinMKD/src/main/resources/templates/components/header.html
+++ b/Domasna rabota 2/tech prototype/KinMKD/src/main/resources/templates/components/header.html
@@ -1,7 +1,7 @@
 <header class="header_section">
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" th:href="@{/home}">
         <span>
           KinMKD
         </span>
@@ -14,27 +14,27 @@
                 <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
                     <ul class="navbar-nav  ">
                         <li class="nav-item active">
-                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" th:href="@{/home}">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html"> About </a>
+                            <a class="nav-link" th:href="@{/about}"> About </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="login.html"> Login </a>
+                            <a class="nav-link" th:href="@{/account/login}"> Login </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="signup.html"> Signup </a>
+                            <a class="nav-link" th:href="@{/account/register}"> Signup </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Log out</a>
+                            <a class="nav-link" th:href="@{/home}">Log out</a>
                         </li>
                     </ul>
                     <div class="user_option">
                         <a href="">
-                            <img src="images/user.png" alt="">
+                            <img th:src="@{/images/user.png}" alt="">
                         </a>
                         <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
-                            <a class="btn  my-2 my-sm-0 nav_search-btn" href="search.html"></a>
+                            <a class="btn  my-2 my-sm-0 nav_search-btn" th:href="@{/location/search}"></a>
                         </form>
                     </div>
                 </div>
