--- a/Domasna rabota 2/tech prototype/KinMKD/src/main/resources/templates/master-layout.html
+++ b/Domasna rabota 2/tech prototype/KinMKD/src/main/resources/templates/master-layout.html
@@ -18,15 +18,15 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 
     <!-- bootstrap core css -->
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.css}" />
 
     <!-- fonts style -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,700&display=swap" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet" />
+    <link th:href="@{/css/style.css}" rel="stylesheet" />
     <link th:if="${hasCssFile}" rel="stylesheet" th:href="@{/css/{name}(name=${cssFile})}">
     <!-- responsive style -->
-    <link href="css/responsive.css" rel="stylesheet" />
+    <link th:href="@{/css/responsive.css}" rel="stylesheet" />
 </head>
 <body th:class="(${hasBody} ? 'sub_page' : '')">
     <div class="hero_area">
@@ -39,8 +39,8 @@
         <th:block th:include="${body}"></th:block>
     </th:block>
     <section th:replace="components/footer"></section>
-    <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.js"></script>
+    <script type="text/javascript" th:src="@{/js/jquery-3.4.1.min.js}" ></script>
+    <script type="text/javascript" th:src="@{/js/bootstrap.js}"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 </body>
 </html>
