--- a/Domasna rabota 3/KinMKD/src/main/resources/templates/components/header.html
+++ b/Domasna rabota 3/KinMKD/src/main/resources/templates/components/header.html
@@ -26,7 +26,8 @@
                             <a class="nav-link" th:href="@{/account/register}"> Signup </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" th:href="@{/home}">Log out</a>
+                            <a class="nav-link" href="javascript:document.querySelector('#logout-form').submit()">Log out</a>
+                            <form th:action="@{/account/logout}" th:method="POST" style="display: none" id="logout-form"></form>
                         </li>
                     </ul>
                     <div class="user_option">
