Created authorization in header and details

--- a/Domasna rabota 3/KinMKD/src/main/resources/templates/about.html
+++ b/Domasna rabota 3/KinMKD/src/main/resources/templates/about.html
@@ -156,11 +156,11 @@
               објекти, оценување и оставање на коментари, апликацијата креира заедничка
               заедница за љубителите на културното и историското наследство на Македонија.
             </p>
-            <div>
-              <a href="">
-                Прочитај повеќе
-              </a>
-            </div>
+<!--            <div>-->
+<!--              <a href="">-->
+<!--                Прочитај повеќе-->
+<!--              </a>-->
+<!--            </div>-->
           </div>
         </div>
       </div>
