--- a/Domasna rabota 3/KinMKD/src/main/resources/templates/search.html
+++ b/Domasna rabota 3/KinMKD/src/main/resources/templates/search.html
@@ -126,11 +126,23 @@
         </select>
         <button style="margin-left: 1%" id="searchByCategory" type="submit">Search</button>
       </form>
+      <div id="locationResults" th:if="${hasBeenSearched}">
+        <div th:each="location : ${resultLocations}" class="location-row" th:onclick="'window.location.href=\'/location/' + ${location.id}\'">
+          <div class="location-info">
+            <div th:text="${location.name}"></div>
+            <div th:text="${location.nameEN}"></div>
+            <div th:text="${location.categoryId}"></div>
+          </div>
+          <a th:href="'/location/' + ${location.id}" class="location-link">View Details</a>
+        </div>
+        <div th:if="${#lists.isEmpty(resultLocations)}">
+          <p class="location-info not-found">No locations found.</p>
+        </div>
+
+      </div>
+
+
     </div>
   </section>
-  <th:block th:if="${hasBeenSearched}">
-    <ul>
-      <a th:each="location : ${resultLocations}" th:href="'/location/'+${location.id}" th:text="${location.name}"></a>
-    </ul>
-  </th:block>
+
 </th:block>
