--- a/Domasna rabota 3/KinMKD/src/main/resources/templates/myReview.html
+++ b/Domasna rabota 3/KinMKD/src/main/resources/templates/myReview.html
@@ -166,7 +166,7 @@
 
 <th:block xmlns:th="http://www.thymeleaf.org">
   <section class="who_section layout_padding" style="margin-top: 7%;margin-bottom: 2%">
-
+    <form>
     <div class="container">
       <div class="card">
 
@@ -230,6 +230,6 @@
         </div>
       </div>
     </div>
-
+    </form>
   </section>
 </th:block>
