login-form-modification

--- a/Domasna rabota 3/KinMKD/src/main/resources/static/css/login&signup.css
+++ b/Domasna rabota 3/KinMKD/src/main/resources/static/css/login&signup.css
@@ -5,7 +5,8 @@
 .container{
     position: relative;
     margin-top: 22%;
-    margin-bottom: -18%;
+    margin-bottom: -17%;
+    margin-left: 12%;
     left: 39%;
     transform: translate(-50%,-50%);
     max-width: 430px;
@@ -17,7 +18,10 @@
 
 .container .form{
     padding: 2rem;
+    margin-top: 300px;
+
 }
+
 .form header{
     font-size: 2rem;
     font-weight: 500;
