Implemented scrolling to location results

--- a/Domasna rabota 3/KinMKD/src/main/resources/templates/search.html
+++ b/Domasna rabota 3/KinMKD/src/main/resources/templates/search.html
@@ -116,7 +116,7 @@
 <!--</html>-->
 
 <th:block xmlns:th="http://www.thymeleaf.org">
-  <section class="who_section layout_padding" style="margin-top: 7%;margin-bottom: 2%">
+  <section class="who_section layout_padding">
     <div class="container">
       <form id="form2" th:method="POST" th:action="@{/location/search}">
         <input type="text" id="input" placeholder="Search by keyword..." name="nameKeyword">
