--- a/Domasna rabota 4/KinMKD/src/main/resources/templates/details.html
+++ b/Domasna rabota 4/KinMKD/src/main/resources/templates/details.html
@@ -194,7 +194,7 @@
                                </th:block>
                            </div>
                     </div>
-                        <th:block th:if="${user!=null}">
+                        <th:block sec:authorize="isAuthenticated()">
                             <div>
                                 <a th:href="('/location/'+${location.id}+'/my-review')">
                                     My Review
