--- a/Domasna rabota 4/KinMKD/src/main/resources/templates/components/header.html
+++ b/Domasna rabota 4/KinMKD/src/main/resources/templates/components/header.html
@@ -1,4 +1,4 @@
-<header class="header_section" xmlns:th="http://www.thymeleaf.org">
+<header class="header_section">
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
             <a class="navbar-brand" th:href="@{/home}">
@@ -19,7 +19,7 @@
                         <li class="nav-item">
                             <a class="nav-link" th:href="@{/about}"> About </a>
                         </li>
-                        <th:block sec:authorize="isAnonymous()">
+                        <th:block th:if="${user == null}">
                             <li class="nav-item">
                                 <a class="nav-link" th:href="@{/account/login}"> Login </a>
                             </li>
@@ -27,7 +27,7 @@
                                 <a class="nav-link" th:href="@{/account/register}"> Signup </a>
                             </li>
                         </th:block>
-                        <th:block sec:authorize="isAuthenticated()">
+                        <th:block th:if="${user != null}">
                             <li class="nav-item">
                                 <a class="nav-link" href="javascript:document.querySelector('#logout-form').submit()">Log out</a>
                                 <form th:action="@{/account/logout}" th:method="POST" style="display: none" id="logout-form"></form>
