--- a/Domasna rabota 4/KinMKD/src/main/resources/templates/login.html
+++ b/Domasna rabota 4/KinMKD/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
           <th:block th:if="${hasError}">
             <p style="color: red" th:text="${error}"></p>
           </th:block>
-          <input type="email" placeholder="Enter your email" required name="username">
+          <input type="email" placeholder="Enter your email" required name="email">
           <input type="password" placeholder="Enter your password" required name="password">
           <input type="submit" class="button" value="Login">
         </form>
